- Block removing successfull

--- a/Saved/Config/Windows/EditorPerProjectUserSettings.ini
+++ b/Saved/Config/Windows/EditorPerProjectUserSettings.ini
@@ -134,7 +134,7 @@ WorldSettings=WorldSettings.GameMode.SelectedGameModeDetails,
 LastLevel=/Game/BasicMap
 
 [ModuleFileTracking]
-MyProject2.TimeStamp=2017.07.01-19.03.40
+MyProject2.TimeStamp=2017.07.09-14.42.15
 MyProject2.LastCompileMethod=Runtime
 PakFile.TimeStamp=2017.06.30-21.40.47
 PakFile.LastCompileMethod=External
@@ -674,7 +674,7 @@ MaterialEditor.TimeStamp=2017.06.08-20.14.59
 MaterialEditor.LastCompileMethod=Unknown
 
 [AssetEditorManager]
-CleanShutdown=True
+CleanShutdown=False
 
 [DetailCategories]
 PlayerStart.TransformCommon=True
@@ -1224,7 +1224,7 @@ HOTRELOADED_McCharacter_2.Actor=True
 
 [DetailPropertyExpansion]
 EndUserSettings="\"Object.Privacy.bSendAnonymousUsageDataToEpic\" "
-Object=
+Object="\"Object.Collision.BodyInstance.CollisionResponses.ResponseArray.ResponseArray[7]\" "
 InputSettings="\"Object.Bindings.AxisConfig\" \"Object.Bindings.ActionMappings.ActionMappings[0]\" \"Object.Bindings.AxisMappings.AxisMappings[3]\" \"Object.Bindings.AxisMappings.AxisMappings[5]\" "
 Brush="\"Object.BrushBuilder.BrushBuilder.Object.BrushSettings\" "
 EditorStyleSettings="\"Object.Colors.EditorMainWindowBackgroundOverride\" \"Object.Colors.EditorMainWindowBackgroundOverride.TintColor\" \"Object.Colors.EditorChildWindowBackgroundOverride\" \"Object.Colors.EditorChildWindowBackgroundOverride.TintColor\" "
@@ -1242,7 +1242,7 @@ GameplayDebuggerConfig="\"Object.AddOns.Categories\" \"Object.AddOns.Categories.
 MovieSceneToolsProjectSettings="\"Object.TrackSettings.FbxSettings\" \"Object.TrackSettings.FbxSettings.FbxSettings[0]\" "
 PaperImporterSettings="\"Object.ImportSettings.NormalMapTextureSuffixes\" \"Object.ImportSettings.BaseMapTextureSuffixes\" "
 LevelSequenceEditorSettings="\"Object.Tracks.TrackSettings\" \"Object.Tracks.TrackSettings.TrackSettings[0]\" \"Object.Tracks.TrackSettings.TrackSettings[0].DefaultTracks\" \"Object.Tracks.TrackSettings.TrackSettings[1]\" \"Object.Tracks.TrackSettings.TrackSettings[1].DefaultTracks\" \"Object.Tracks.TrackSettings.TrackSettings[2]\" \"Object.Tracks.TrackSettings.TrackSettings[2].DefaultTracks\" \"Object.Tracks.TrackSettings.TrackSettings[2].DefaultPropertyTracks\" \"Object.Tracks.TrackSettings.TrackSettings[3]\" \"Object.Tracks.TrackSettings.TrackSettings[3].DefaultPropertyTracks\" \"Object.Tracks.TrackSettings.TrackSettings[3].ExcludeDefaultPropertyTracks\" \"Object.Tracks.TrackSettings.TrackSettings[4]\" \"Object.Tracks.TrackSettings.TrackSettings[4].DefaultTracks\" \"Object.Tracks.TrackSettings.TrackSettings[4].DefaultPropertyTracks\" "
-Chunk="\"Object.Chunk.HISMC.Object.Instances.PerInstanceSMData.PerInstanceSMData[495]\" \"Object.Chunk.HISMC.Object.Instances.PerInstanceSMData.PerInstanceSMData[510]\" "
+Chunk="\"Object.Chunk.HISMC.Object.Instances.PerInstanceSMData\" \"Object.Chunk.HISMC.Object.Instances.PerInstanceSMData.PerInstanceSMData[0]\" \"Object.Chunk.HISMC.Object.Instances.PerInstanceSMData.PerInstanceSMData[0].Transform\" \"Object.Chunk.HISMC.Object.Instances.PerInstanceSMData.PerInstanceSMData[5]\" \"Object.Chunk.HISMC.Object.Instances.PerInstanceSMData.PerInstanceSMData[5].Transform\" \"Object.Chunk.HISMC.Object.Instances.PerInstanceSMData.PerInstanceSMData[495]\" \"Object.Chunk.HISMC.Object.Instances.PerInstanceSMData.PerInstanceSMData[510]\" "
 StaticMeshComponent="\"Object.Collision.BodyInstance.CollisionResponses.ResponseArray.ResponseArray[7]\" "
 MeshComponent=
 PrimitiveComponent="\"Object.Collision.BodyInstance.CollisionResponses.ResponseArray.ResponseArray[7]\" "
